# haproxy-syslog

./: haproxy-syslog.cabal
src/HaProxy/: Syslog.hs
test/: Main.hs
