cabal-version: 2.4
name: haproxy-syslog
version: 0.1.0.0
synopsis: Parse HAProxy syslog
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
copyright: 2020 Layer 3 Communications
category: Data
build-type: Simple

library
  exposed-modules: HaProxy.Syslog
  build-depends:
    , base >=4.13 && <5
    , bytesmith
    , byteslice >=0.2 && <0.3
    , ip
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.13 && <5
    , byteslice >=0.2
    , haproxy-syslog
    , ip
